# xlstm-jax

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  configuration_with_hydra.html  dataset_preparation.html  distributed_training.html  example_training.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  run_benchmark.py  run_tests.py  run_tests.sh  search.html  searchindex.js  slurm_benchmark.job
.doctrees/: configuration_with_hydra.doctree  dataset_preparation.doctree  distributed_training.doctree  example_training.doctree  index.doctree  installation.doctree
.doctrees/autoapi/: index.doctree
.github/license-check/: config.json  header_c.txt
.github/workflows/: flake8.yml  lint-and-typecheck.yml  pre-commit.yml  pytest.yml  sphinx.yml
_sources/: configuration_with_hydra.md  configuration_with_hydra.md.txt  dataset_preparation.md.txt  distributed_training.md  installation.md
_sources/autoapi/: index.rst
_static/: custom.css
autoapi/: index.html
autoapi/lmeval_extended_evaluation/: index.html
autoapi/xlstm_jax/: index.html
configs/: config.yaml
configs/checkpointing/: model_checkpointing.yaml
configs/data/: bigcode_stack_arrayrecord.yaml  bigcode_stack_arrayrecord_train.yaml  bigcode_stack_snapshot_arrayrecord.yaml  bigcode_stack_snapshot_arrayrecord_train.yaml  dclm_arrayrecord.yaml  dclm_arrayrecord_eval.yaml  dclm_arrayrecord_eval_preprocessed.yaml  dclm_arrayrecord_train.yaml  default_arrayrecord_eval.yaml  default_arrayrecord_train.yaml  default_hf_local_ds_eval.yaml  default_hf_local_ds_train.yaml  dolmino_mix_arrayrecord.yaml  dolmino_mix_arrayrecord_train.yaml  fineweb_edu_arrayrecord.yaml  fineweb_edu_arrayrecord_train.yaml  large_sft_datasets_arrayrecord.yaml  large_sft_datasets_arrayrecord_train.yaml  large_sft_datasets_pp2_arrayrecord.yaml  large_sft_datasets_pp2_arrayrecord_train.yaml  open_web_math_arrayrecord.yaml  open_web_math_arrayrecord_train.yaml  proofpile2_arrayrecord.yaml  proofpile2_arrayrecord_train.yaml  slimpajama_627B_arrayrecord.yaml  slimpajama_627B_arrayrecord_eval.yaml  slimpajama_627B_arrayrecord_eval_preprocessed.yaml  slimpajama_627B_arrayrecord_eval_preprocessed_gpt2.yaml  slimpajama_627B_arrayrecord_train.yaml  slimpajama_627B_huggingface_ds.yaml  slimpajama_627B_huggingface_ds_eval.yaml  slimpajama_627B_huggingface_ds_train.yaml  slimpajama_627B_local_ds.yaml  slimpajama_627B_local_ds_eval.yaml  slimpajama_627B_local_ds_train.yaml  slimpajama_6B_arrayrecord.yaml  slimpajama_6B_arrayrecord_eval.yaml  slimpajama_6B_arrayrecord_eval_preprocessed.yaml  slimpajama_6B_arrayrecord_eval_preprocessed_gpt2.yaml  slimpajama_6B_arrayrecord_train.yaml  (+32 more)
configs/experiment/: benchmark_mLSTMv1_7B.yaml  data_for_unit_test.yaml  synthetic_experiment.yaml  synthetic_experiment_slurm.yaml  synthetic_experiment_slurm_sweep.yaml  synthetic_experiment_sweep.yaml  tiny_experiment_for_unit_testing.yaml  train_llama1.3B_dclm.yaml  train_llama1.3B_slimpajama627b.yaml  train_llama1.3B_slimpajama6b.yaml  train_llama165M_slimpajama627b.yaml  train_llama165M_slimpajama6b.yaml  train_llama7B_dclm.yaml  train_llama7B_dclm_cosine.yaml  train_mLSTM1.3B_dclm_cosine.yaml  train_mLSTM1.3B_slimpajama627b.yaml  train_mLSTM120M_slimpajama627b.yaml  train_mLSTM120M_slimpajama6b.yaml  train_mLSTM165M_slimpajama627b.yaml  train_mLSTM165M_slimpajama6b.yaml  train_mLSTM1_3B_slimpajama6b.yaml  train_mLSTM7B_slimpajama627b.yaml  train_mLSTM7B_slimpajama6b.yaml  train_mLSTM_small_slimpajama6b_verify_slurm.yaml  train_mLSTMv1_1.3B_dclm.yaml  train_mLSTMv1_1.3B_dclm_cosine.yaml  train_mLSTMv1_1.3B_dclm_long_run.yaml  train_mLSTMv1_1.3B_fineweb_edu.yaml  train_mLSTMv1_1.3B_slimpajama627b.yaml  train_mLSTMv1_1.3B_zyda2.yaml  train_mLSTMv1_165M_slimpajama627b.yaml  train_mLSTMv1_2.7B_dclm_cosine.yaml  train_mLSTMv1_7B_dclm.yaml  train_mLSTMv1_7B_dclm_cosine.yaml  train_mLSTMv1_7B_dclm_cosine_igate_init.yaml  train_mLSTMv1_7B_dclm_cosine_no_softcap.yaml  (+4 more)
configs/model/: llama1.3B.yaml  (+13 more)
distributed/: data_parallel.py  pipeline_parallel.py  single_gpu.py  tensor_parallel.py  tensor_parallel_async.py  tensor_parallel_transformer.py  utils.py
docs/: conf.py  configuration_with_hydra.md  dataset_preparation.md  example_training.md  index.rst  installation.md  requirements.txt
envs/: environment_jax_0.4.32_cpu_python_3.11.yaml  environment_jax_0.4.32_cpu_python_3.11.yml  environment_jax_0.4.32_gpu_python_3.11.yml  environment_python_3.11_jax_0.4.34_cuda_12.6.yml
model/: utils.py  xlstm_block_stack.py  xlstm_lm_model.py
model_parallel/: __init__.py  benchmark.py  checkpointing.py  training.py  utils.py  xlstm_block_stack.py  xlstm_lm_model.py
model_pytorch/: utils.py  xlstm_block_stack.py  xlstm_lm_model.py
scripts/: benchmark_with_hydra.py  check_config.py  convert_mlstm_checkpoint_jax_to_torch_simple.py  create_sft_dataset_symlinks.py  generate_all_sft_datasets.py  get_cli_command_to_resume_training.py  hf_to_arrayrecord.py  preprocess_ar_dataset.py  preprocess_hf_dataset.py  resume_training_with_hydra.py  run_benchmark.py  run_check_grain_packing_stats.py  run_checkpoint_conversion.py  run_dataset_stats.py  run_for_new_checkpoints.py  run_huggingface_evaluation.py  run_jax_kernel_comparison.py  run_lmeval.py  run_mlstm_backend_benchmarks.py  run_pytorch_kernels.py  run_train_llama_slimpajama.py  run_train_llama_slimpajama6b.py  run_train_slimpajama.py  run_train_slimpajama6b.py  run_train_synthetic.py  run_train_wikitext103.py  split_array_records_dataset.py  train_with_hydra.py
slurm/: slurm_benchmark.job  slurm_evaluation.job  slurm_evaluation_llama.job  slurm_llama_slimpajama.job  slurm_llama_slimpajama6b.job  slurm_slimpajama.job  slurm_slimpajama6b.job  slurm_wikitext103.job
tests/: conftest.py  model_data_parallel.py  model_jax_pytorch_equivalent.py  model_single_gpu.py  model_tensor_parallel.py
xlstm_jax/: common_types.py  configs.py  define_hydra_schemas.py  import_utils.py  main_train.py  resume_training.py  start_training.py  train_init_fns.py
(+931 files in other folders)
