[project]
name = "xlstm-jax"
version = "0.0.1"
authors = [
  { name="NXAI", email="info@nx-ai.com" },
]
description = "xLSTM implementation in JAX"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NX-AI/xlstm-jax"
Issues = "https://github.com/NX-AI/xlstm-jax/issues"

# docformatter
[tool.docformatter]
diff = true
docstring-length = [90, 120]
in-place = true
pre-summary-newline = true
recursive = true
wrap-summaries = 120
wrap-descriptions = 120

# flake8
[tool.flake8]
count = true
extend-ignore = "E203"
exclude = [
    ".git",  # No need to traverse our git directory
    "__pycache__",  # There's no value in checking cache directories
]
#max-complexity = 15
max-doc-length = 120
max-line-length = 120
per-file-ignores = """
    */__init__.py: F401
"""

# interrogate
[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
ignore-overloaded-functions = false
fail-under = 55
exclude = []
ignore-regex = []
ext = []
style = "google"
verbose = 1  # possible values: 0 (minimal output), 1 (-v), 2 (-vv)
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

# ruff
[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "archive",
]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["I001"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "first-party", "third-party", "xlstm_jax", "local-folder"]

[tool.ruff.lint.isort.sections]
"xlstm_jax" = ["xlstm_jax"]

[tool.ruff.format]
quote-style = "double"

# setuptools
[tool.setuptools]
packages = ["xlstm_jax"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
